--- a/src/styles/evictors-list.scss
+++ b/src/styles/evictors-list.scss
@@ -11,7 +11,7 @@
         min-height: 100vh;
       }
       .column.col-8 {
-        padding: 1.25rem;
+        padding: 1.2rem 1.2rem 0.7rem 1.2rem;
       }
       .rank {
         margin-top: 1rem;
